<resources>
    <string name="app_name">Exo 02</string>

    <string name="title_info">Information</string>
    <string name="title_call">Telephoner</string>

    <string name="label_username">Username :</string>
    <string name="lable_phone_number">Numéro :</string>
    <string name="label_password">Password</string>

    <string name="btn_login">Login</string>
    <string name="btn_menu_info">Information</string>
    <string name="btn_menu_call">Téléphoner</string>
    <string name="btn_call">Appeler</string>

    <string name="img_logo_desc">Della Duck</string>
    <string name="img_main_desc">Picsou house</string>
    <string name="img_cat_desc">Chat de trigun</string>

    <string name="cat_lorem">Attack feet behind the couch destroy couch flop over give attitude hide when guests come over hopped up on goofballs hunt anything that moves intrigued by the shower need to chase tail leave dead animals as gifts, all of a sudden go crazy rub face on everything chase mice sweet beast under the bed chase imaginary bugs stand in front of the computer screen chew ipad power cord . Leave dead animals as gifts give attitude stand in front of the computer screen attack feet intently stare at the same spot shake treat chase imaginary bugs flop over all of a sudden go crazy hunt anything that moves rub face on everything, behind the couch destroy couch chase mice need to chase tail hide when guests come over intrigued by the shower sweet beast under the bed chew ipad power cord hopped up on goofballs bag stretch chase imaginary bugs, need to chase tail shake treat hopped up on goofballs intrigued by the shower rub face on everything hide when guests come over sweet beast under the bed destroy couch all of a sudden go crazy. Attack feet chase imaginary bugs stand in front of the computer screen flop over chase mice hide when guests come over sweet beast under the bed need to chase tail rub face on everything, destroy couch bag stretch hopped up on goofballs intrigued by the shower hunt anything that moves intently stare at the same spot chew ipad power cord shake treat all of a sudden go crazy, behind the couch leave dead animals as gifts give attitude shake treat sweet beast under the bed attack feet behind the couch destroy couch.</string>
    <string name="toast_welcome_msg">Bienvenue %s</string>
    <string name="toast_error_login">Bad credentials !</string>
    <string name="unknown_username">Inconnu</string>
    <string name="uri_tel">tel:%s</string>
    <string name="toast_no_call_permission">Il est necessaire d\'autoriser l\'application à utiliser le téléphone, si vous désirez effectuer un appel avec celle-ci... Sans cela, il n\'est pas possible que l\'application puisse effecter un appel (et c\'est une sécurité imposé par Android. Merci d\'accepter) !</string>
</resources>