<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/spacer"
    tools:context=".InfoActivity">

    <TextView
        style="@style/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_info" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_margin="5dp"
        android:contentDescription="@string/img_cat_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/trigun_cat" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            style="@style/long_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="always"
            android:scrollbars="vertical"
            android:text="@string/cat_lorem" />
    </ScrollView>

</LinearLayout>