<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <include
            layout="@layout/logo_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

    </FrameLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacer">

            <TextView
                style="@style/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_login_username"
                android:text="@string/label_username" />

            <EditText
                android:id="@+id/et_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:minHeight="48dp"
                android:nextFocusForward="@id/et_login_password" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/spacer_inner" />

            <TextView
                style="@style/label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@id/et_login_password"
                android:text="@string/label_password" />

            <EditText
                android:id="@+id/et_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="@dimen/spacer" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_login" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>